<resources>
    <string name="implement">Feature needs to be implemented.</string>

    <!-- API Addresses -->
    <string name="base_url">"http://web.socem.plymouth.ac.uk/IntProj/PRCS252E/"</string>
    <string name="api_base_url">"http://web.socem.plymouth.ac.uk/IntProj/PRCS252E/api/"</string>

    <!-- Resources for LoginActivity -->
    <string name="app_name">NationalCoach - Mobile Application</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="title_activity_create_account">Create Your Account</string>
    <string name="login">NationalCoach</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="registrationFormTitle">Create Your Account</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="addresslineone">Address Line One</string>
    <string name="addresslinetwo">Address Line Two</string>
    <string name="postcode">Post Code</string>
    <string name="mobile">Mobile Number</string>
    <string name="password_again">Confirm Password</string>
    <string name="dateofbirth">Date Of Birth</string>
    <string name="register">Register</string>
    <string name="fieldsEmpty">No field in the form can be left empty.</string>
    <string name="passwordsMustBeSame">Your password and password confirmation must match.</string>
    <string name="title_activity_view_account_details">My Account Details</string>
    <string name="postcodeLabel">Postcode:</string>
    <string name="address_line_1">Address (Line 1):</string>
    <string name="date_of_birth">Date of Birth:</string>
    <string name="customer_id">Customer ID:</string>
    <string name="last_name">Last Name:</string>
    <string name="first_name">First Name:</string>
    <string name="textview1">TextView</string>
    <string name="textview2">TextView</string>
    <string name="textview3">TextView</string>
    <string name="phone_number">Mobile Number:</string>
    <string name="emailLabel">Email:</string>
    <string name="passwordLabel">Password:</string>
    <string name="address_line_2">Address (Line 2):</string>
    <string name="textview4">TextView</string>
    <string name="textview5">TextView</string>
    <string name="textview6">TextView</string>
    <string name="textview7">TextView</string>
    <string name="textview8">TextView</string>
    <string name="textview9">TextView</string>
    <string name="textview10">TextView</string>
    <string name="noText">None</string>
    <string name="title_activity_home">NationalCoach</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="day_of_travel">Day Of Travel</string>
    <string name="departure_time">Tap to select Departure Time Period</string>
    <string name="find_your_journey">Find Your Journey</string>
    <string name="services">Services</string>
    <string name="account">Account</string>
    <string name="bookings">Bookings</string>
    <string name="history">History</string>
    <string name="where_to">Where To...</string>
    <string name="where_from">Where From...</string>
    <string name="title_activity_navigation">NationalCoach - Home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Resources for CreateAccountActivity -->

    <!-- Home Fragment -->
    <string name="departure_spinner_prompt">Choose Departure Stop</string>
    <string name="arrival_spinner_prompt">Choose Arrival Stop</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
</resources>
